.k8s/bluemap-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluemap
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redcraft-bluemap
  namespace: bluemap
spec:
  ingressClassName: nginx
  rules:
    - host: map.redcraft.org
      http:
        paths:
          - backend:
              service:
                name: bluemap
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: bluemap
  namespace: bluemap
spec:
  ports:
    - name: bluemap
      port: 80
      protocol: TCP
      targetPort: 8804
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bluemap
  namespace: bluemap
subsets:
  - addresses:
      - ip: 10.0.2.143
    ports:
      - name: bluemap
        port: 8100
        protocol: TCP
