.k8s/plan-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plan
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redcraft-plan
  namespace: plan
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - plan.redcraft.org
      secretName: plan-certificate
  rules:
    - host: plan.redcraft.org
      http:
        paths:
          - backend:
              service:
                name: plan
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: plan
  namespace: plan
spec:
  ports:
  - name: plan
    port: 80
    protocol: TCP
    targetPort: 8804
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plan
  namespace: plan
subsets:
- addresses:
  - ip: 195.201.181.21
  ports:
  - name: plan
    port: 8804
    protocol: TCP
