.k8s/website-ingress-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redcraft-website
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - host: redcraft.org
      http:
        paths:
          - backend:
              service:
                name: website
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /
