.k8s/website-ingress-testing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redcraft-website
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - testing.redcraft.org
      secretName: website-certificate
  rules:
    - host: testing.redcraft.org
      http:
        paths:
          - backend:
              service:
                name: website
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /
